Kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastech
  namespace: tech
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:       
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image:  bitnami/prometheus:2.55.1-debian-12-r15           #devopschima11/html:v1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9090



---
apiVersion: v1
kind:   Service
metadata:
  name: fastech-service
  namespace: tech
spec:
  selector:
    app: prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
    
  


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-chima
  namespace: tech
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:main-ubuntu
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000



---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: tech
spec:
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
    




---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: tech
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image:  devopschima11/html:v1.0    #bitnami/argo-cd:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: deploy-service
  namespace: tech
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
