Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastech-ingress
  namespace: tech
  annotations: {}
  
  labels:
    name: myingress
spec:
  rules: 
  - host: fastech.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fastech-service
            port: 
              number: 9090
  - host: web-chima.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port: 
              number: 3000
  - host: deploy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deploy-service
            port: 
              number: 80

  tls:
   - hosts:
      - fastech.com
     secretName: mysecret
